# nheqminer

./: CMakeLists.txt  LICENSE  LICENSE_MIT  README.md
cpu_tromp/: equi.h  equi_miner.h
cuda_tromp/: blake2b.cu  equi_miner.cu
nheqminer/: AvailableSolvers.h  COPYING  MinerFactory.cpp  main.cpp  nheqminer.sln  nheqminer.vcxproj  nheqminer.vcxproj.filters
nheqminer/libstratum/: ZcashStratum.cpp
zhminer/: ISolver.h  MinerFactory.h  SolverStub.h  main.cpp  zhminer.sln  zhminer.vcxproj
zhminer/compat/: endian.h
zhminer/libstratum/: ZcashStratum.cpp
